samples/_failures_safe/1761263845_50c661_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23966784.c: In function ‘main’:
./samples/SAFE/__tmp_23966784.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
